Dynamically "memorize" stops from the GTFS data as if they were present in the database, to handle missing stops more smoothly.
Stops should still be added manually with all their details, but while they are not present yet, minimal data from the GTFS data is automatically loaded. It is not persisted to prevent persistent issues should the GTFS feed contain invalid data